--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to about_path, class: "nav_link tedt-light" do %>
+                  <%= link_to about_path, class: "nav_link text-light" do %>
                     <i class="fas fa-link"></i> About
                   <% end %>
                 </li>
