[add]ActiveStrage、[edit]user詳細ページ=>Bootstrapの復習とコントローラーの書き方復習

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>User info</h1>
+      <p><%= image_tag @user.get_profile_image(100.100) %></p>
+    </div>
+
+    <div class="col">
+      <h1>Book detail</h1>
+    </div>
+  </div>
+</div>
