--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to books_path, class: "nav_link text-link" do %>
+                  <%= link_to books_path, class: "nav_link text-light" do %>
                     <i class="fas fa-book-open"></i> Books
                   <% end %>
                 </li>
