[add]プロフィール画面を表示させる=>画像表示・ActiveStrageの復習

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <h1>User info</h1>
-      <p><%= image_tag @user.get_profile_image(100.100) %></p>
+      <p><%= image_tag @user.get_profile_image, size: '100x100' %></p>
     </div>
 
     <div class="col">
